// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-file-upload allowedExtensionsHelpMessage 1`] = `
<div>
  <div
    class="m-modal"
  >
    <span>
      <button
        class="m-button m--is-skin-primary"
        type="button"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          File upload 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
    </span>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-file-upload allowedExtensionsOnly 1`] = `
<div>
  <h5>
    Allowed extensions only
  </h5>
   
  <span>
    Allowed extensions: jpg, jpeg, png
  </span>
   
  <div
    class="m-modal"
  >
    <span>
      <button
        class="m-button m--is-skin-primary"
        type="button"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          File upload 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
    </span>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-file-upload customValidationFunction 1`] = `
<div>
  <h5>
    Allowed files based on custom validation function
  </h5>
   
  <span>
    Allowed filenames that contains the string "John" only - else displays custom message
  </span>
   
  <div
    class="m-modal"
  >
    <span>
      <button
        class="m-button m--is-skin-primary"
        type="button"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          File upload 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
    </span>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-file-upload default 1`] = `
<div
  class="m-modal"
>
  <span>
    <button
      class="m-button m--is-skin-primary"
      type="button"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        File upload 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </span>
   
  <!---->
</div>
`;

exports[`Storyshots modul-components|m-file-upload headerSlot 1`] = `
<div>
  <div
    class="m-modal"
  >
    <span>
      <button
        class="m-button m--is-skin-primary"
        type="button"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          File upload 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
    </span>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-file-upload rejectedExtensionsOnly 1`] = `
<div>
  <h5>
    Allowed and rejected extensions
  </h5>
   
  <span>
    Allowed extensions: jpg, jpeg, png, mp4
  </span>
   
  <div
    class="m-modal"
  >
    <span>
      <button
        class="m-button m--is-skin-primary"
        type="button"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          File upload 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
    </span>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-file-upload replacementFile 1`] = `
<div>
  <h5>
    Replacement file
  </h5>
   
  <span>
    Prop max-files: 1
  </span>
   
  <div
    class="m-modal"
  >
    <span>
      <button
        class="m-button m--is-skin-primary"
        type="button"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          File upload 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
    </span>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-file-upload replacementFileMax10 1`] = `
<div>
  <h5>
    Replacement file
  </h5>
   
  <span>
    Prop max-files: 10 - should allowed only one
  </span>
   
  <div
    class="m-modal"
  >
    <span>
      <button
        class="m-button m--is-skin-primary"
        type="button"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          File upload 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
    </span>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-file-upload replacementFileUndefined 1`] = `
<div>
  <h5>
    Replacement file
  </h5>
   
  <span>
    Prop max-files: undefined
  </span>
   
  <div
    class="m-modal"
  >
    <span>
      <button
        class="m-button m--is-skin-primary"
        type="button"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          File upload 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
    </span>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-file-upload singleFileUpload 1`] = `
<div>
  <div
    class="m-modal"
  >
    <span>
      <button
        class="m-button m--is-skin-primary"
        type="button"
      >
        <!---->
         
        <!---->
         
        <span
          class="m-button__text"
        >
          File upload 
          <!---->
        </span>
         
        <!---->
         
        <!---->
      </button>
    </span>
     
    <!---->
  </div>
</div>
`;
